--- a/package.json
+++ b/package.json
@@ -86,11 +86,13 @@
     "@ngx-translate/core": "15.0.0",
     "@ngx-translate/http-loader": "8.0.0",
     "@popperjs/core": "2.11.8",
+    "@stomp/rx-stomp": "2.0.0",
     "bootstrap": "5.3.3",
     "bootswatch": "5.3.3",
     "dayjs": "1.11.13",
     "ngx-infinite-scroll": "18.0.0",
     "rxjs": "7.8.1",
+    "sockjs-client": "1.6.1",
     "tslib": "2.7.0",
     "zone.js": "0.14.10"
   },
@@ -103,6 +105,7 @@
     "@angular/service-worker": "18.2.5",
     "@types/jest": "29.5.13",
     "@types/node": "20.11.25",
+    "@types/sockjs-client": "1.5.4",
     "angular-eslint": "18.3.1",
     "browser-sync": "3.0.2",
     "browser-sync-webpack-plugin": "2.3.0",
