--- a/package.json
+++ b/package.json
@@ -85,12 +85,14 @@
     "@ng-bootstrap/ng-bootstrap": "17.0.1",
     "@ngx-translate/core": "15.0.0",
     "@ngx-translate/http-loader": "8.0.0",
-    "@popperjs/core": "2.11.8",
+    "@popperjs/core": "^2.11.8",
     "@stomp/rx-stomp": "2.0.0",
     "bootstrap": "5.3.3",
     "bootswatch": "5.3.3",
     "dayjs": "1.11.13",
+    "jquery": "^3.7.1",
     "ngx-infinite-scroll": "18.0.0",
+    "popper.js": "^1.16.1",
     "rxjs": "7.8.1",
     "sockjs-client": "1.6.1",
     "tslib": "2.7.0",
