--- a/pom.xml
+++ b/pom.xml
@@ -275,7 +275,20 @@
             <artifactId>testcontainers</artifactId>
             <scope>test</scope>
         </dependency>
+
+      <dependency>
+        <groupId>com.mpatric</groupId>
+        <artifactId>mp3agic</artifactId>
+        <version>0.9.1</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.jaudiotagger</groupId>
+        <artifactId>jaudiotagger</artifactId>
+        <version>2.0.1</version>
+      </dependency>
     </dependencies>
+
 
     <build>
         <defaultGoal>spring-boot:run</defaultGoal>
