--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -21,6 +21,10 @@ logging:
     com.konsol.beatstream: DEBUG
 
 spring:
+  servlet:
+    multipart:
+      max-file-size: 550MB
+      max-request-size: 550MB
   devtools:
     restart:
       enabled: true
