--- a/src/main/resources/swagger/api.yml
+++ b/src/main/resources/swagger/api.yml
@@ -1,15 +1,93 @@
-# API-first development with OpenAPI
-# This file will be used at compile time to generate Spring-MVC endpoint stubs using openapi-generator
-openapi: '3.0.1'
+openapi: 3.0.1
 info:
-  title: 'beatStream'
+  title: beatStream
   version: 0.0.1
 servers:
-  - url: http://localhost:8080/api
+  - url: 'http://localhost:8080/api'
     description: Development server
-  - url: https://localhost:8080/api
+  - url: 'https://localhost:8080/api'
     description: Development server with TLS Profile
-paths: {}
+paths:
+  /audio/upload:
+    post:
+      summary: ''
+      operationId: uploadSongFile
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Track'
+      tags:
+        - music
+      description: upload an music file into your account
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/AudioUpload'
+        description: ''
+    parameters: []
+  /playlist:
+    get:
+      summary: getPlaylists
+      tags:
+        - playlist
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/playlist'
+      operationId: getPlaylists
+    post:
+      summary: createPlaylist
+      operationId: createPlaylist
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/playlist'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/playlist'
+      tags:
+        - playlist
+  '/playlist/{id}':
+    parameters:
+      - schema:
+          type: string
+        name: id
+        in: path
+        required: true
+    get:
+      summary: getPlaylist
+      tags:
+        - playlist
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/playlist'
+      operationId: getPlaylist
+    delete:
+      summary: deletePlaylist
+      operationId: deletePlaylist
+      responses:
+        '200':
+          description: OK
+      tags:
+        - playlist
 components:
   responses:
     Problem:
@@ -56,7 +134,6 @@ components:
                 description: |
                   An absolute URI that identifies the specific occurrence of the problem.
                   It may or may not yield further information if dereferenced.
-
   securitySchemes:
     jwt:
       type: http
@@ -67,6 +144,83 @@ components:
       type: http
       description: Basic Authentication
       scheme: basic
+  schemas:
+    AudioUpload:
+      title: AudioUpload
+      x-stoplight:
+        id: mep03nonbmq60
+      type: object
+      properties:
+        title:
+          type: string
+          x-stoplight:
+            id: fn95bjtsgzawb
+        audioFile:
+          type: string
+          x-stoplight:
+            id: gl12h67pw1rkv
+          format: binary
+        cover:
+          type: string
+          x-stoplight:
+            id: juua06kisx9x4
+          format: binary
+        playlistId:
+          type: string
+          x-stoplight:
+            id: weuiu21xh20wo
+    Track:
+      title: Track
+      x-stoplight:
+        id: 4ponn7x7fcud3
+      type: object
+      properties:
+        id:
+          type: string
+        title:
+          type: string
+          x-stoplight:
+            id: 4o0lrv3dhn5o6
+        duration:
+          type: number
+          x-stoplight:
+            id: s665xbu3q8ri8
+        playlists:
+          type: array
+          x-stoplight:
+            id: u10kn6taajndd
+          items:
+            x-stoplight:
+              id: yxxzgoxli7fnc
+            type: string
+        playCount:
+          type: number
+          x-stoplight:
+            id: fzfizssqe192b
+    playlist:
+      title: playlist
+      x-stoplight:
+        id: 0k89ztr66qhm8
+      type: object
+      properties:
+        id:
+          type: string
+          x-stoplight:
+            id: pmrjd7s2t5ek6
+        title:
+          type: string
+          x-stoplight:
+            id: whk3qmjay7nlh
+        desc:
+          type: string
+          x-stoplight:
+            id: cpfjzr2k9xc4b
+        tracks:
+          type: array
+          x-stoplight:
+            id: bx67u4ruppnj7
+          items:
+            $ref: '#/components/schemas/Track'
 security:
   - jwt: []
   - basic: []
