✨ Create plugin and implement API in frontend (UA) and backend (BE)
- Added plugins for modular architecture ⚙️
- Implemented API in both UA and BE for seamless communication 🔄
- Ensured compatibility and performance enhancements 🚀

#APIs #Plugins #Backend #Frontend

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cleanup": "rimraf target/",
     "docker:db:down": "docker compose -f src/main/docker/mongodb.yml down -v",
     "docker:db:up": "docker compose -f src/main/docker/mongodb.yml up --wait",
+    "generate-api": "openapi-generator-cli generate -i src/main/resources/swagger/api.yml -g typescript-angular -o src/main/webapp/app/core/api",
     "java:docker": "./mvnw -ntp verify -DskipTests -Pprod jib:dockerBuild",
     "java:docker:arm64": "npm run java:docker -- -Djib-maven-plugin.architecture=arm64",
     "java:docker:dev": "npm run java:docker -- -Pdev,webapp",
@@ -91,17 +92,21 @@
     "bootswatch": "5.3.3",
     "dayjs": "1.11.13",
     "jquery": "^3.7.1",
+    "ngx-file-drop": "^16.0.0",
     "ngx-infinite-scroll": "18.0.0",
+    "ngx-plyr": "^4.0.1",
+    "plyr": "^3.7.8",
     "popper.js": "^1.16.1",
     "rxjs": "7.8.1",
-    "sockjs-client": "1.6.1",
-    "tslib": "2.7.0",
+    "sockjs-client": "^1.6.1",
+    "tslib": "^1.14.1",
     "zone.js": "0.14.10"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "18.0.0",
     "@angular-builders/jest": "18.0.0",
     "@angular-devkit/build-angular": "18.2.5",
+    "@angular-eslint/eslint-plugin": "^18.3.1",
     "@angular/cli": "18.2.5",
     "@angular/compiler-cli": "18.2.5",
     "@angular/service-worker": "18.2.5",
