--- a/pom.xml
+++ b/pom.xml
@@ -287,6 +287,19 @@
         <artifactId>jaudiotagger</artifactId>
         <version>2.0.1</version>
       </dependency>
+
+      <dependency>
+        <groupId>org.seleniumhq.selenium</groupId>
+        <artifactId>selenium-java</artifactId>
+        <version>4.18.0</version> <!-- Check for the latest version -->
+      </dependency>
+
+      <dependency>
+        <groupId>org.jsoup</groupId>
+        <artifactId>jsoup</artifactId>
+        <version>1.15.4</version>
+      </dependency>
+
     </dependencies>
 
 
