🎉 Release v1.0.0.0 - First official release as a Windows app
This version marks the first stable release of the application as a Windows app. Features include:

- 🎯 Complete core functionality
- 💾 Improved performance and stability
- 🎨 Finalized UI design for seamless user experience
- 🛠️ Bug fixes and code optimizations

--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -21,6 +21,8 @@ logging:
     com.konsol.beatstream: DEBUG
 
 spring:
+  jmx:
+    enabled: false
   servlet:
     multipart:
       max-file-size: 550MB
@@ -36,6 +38,7 @@ spring:
       indent-output: true
   data:
     mongodb:
+      database: beatStream
       uri: mongodb://localhost:27017/beatStream
   mail:
     host: localhost
