--- a/pom.xml
+++ b/pom.xml
@@ -307,6 +307,11 @@
         <version>3.5.0</version> <!-- Or the latest version -->
       </dependency>
 
+      <dependency>
+        <groupId>net.logstash.logback</groupId>
+        <artifactId>logstash-logback-encoder</artifactId>
+        <version>7.4</version>
+      </dependency>
 
     </dependencies>
 
